Bug 61529 - Migration to Java 9 : jmeter.bat Windows file Java 9 detection
git-svn-id: https://svn.apache.org/repos/asf/jmeter/trunk@1813710 13f79535-47bb-0310-9956-ffa450edef68

Former-commit-id: 3d87e2fdc9319eaf28c87de7c573d85c2e046a7c